--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5174 --strictPort",
+    "serve-mf": "npm run build && npm run preview"
   },
   "dependencies": {
     "react": "^19.1.1",
