--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "serve-mf": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@mantine/core": "^8.3.2",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "bootstrap": "^5.3.8",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
