--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "serve-mf": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mantine/core": "^8.3.2",
+    "@mui/material": "^7.3.2",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
